Card alignment fixed, also card images.

--- a/src/app/components/body/admin/planmanagement/plancard/plan-card.component.scss
+++ b/src/app/components/body/admin/planmanagement/plancard/plan-card.component.scss
@@ -1,4 +1,5 @@
 .temp {
-  width: 340px;
+  width: 400px;
   height: 500px;
 }
+
