--- a/src/app/components/body/products/products.component.scss
+++ b/src/app/components/body/products/products.component.scss
@@ -3,8 +3,8 @@
   float: left;
 }
 .card {
-  width: 18rem;
-  max-width: 18rem;
+  width: 19.2rem;
+  max-width: 25rem;
   height: 25em;
   max-height: 25em;
   background-color: #f8f9fa!important;
@@ -15,7 +15,7 @@
 }
 
 .card-stock{
-  bottom: 0px;
+  bottom: 0;
   float: left;
   text-align: left;
   padding-left: 20px;
@@ -46,12 +46,18 @@ img{
   width: 100%;
 }
 
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+
 .card-body{
   height: 70px;
   overflow: hidden;
 }
 .card-buttons{
-  bottom: 0px;
+  bottom: 0;
   margin: 0 auto;
 }
 .btn btn-primary{
